Refactored CareSchedule creation, removing redundant methods.